Attempt #1 on fixing the weird font rendering on mobile phone

--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,6 @@ html{
 body{
   font-family: 'Open Sans', sans-serif;
   color: var(--main-grey);
-  -webkit-font-smoothing: antialiased;
   height: 100%;
 }
 a{
