--- a/css/media.css
+++ b/css/media.css
@@ -88,11 +88,8 @@
   #work-fullscreen{
     width: calc(100% - 50px);
     height: calc(100% - 50px);
-    top: 0%;
-    left: 0%;
-  }
-  #work-fullscreen:not(.hidden) < body{
-    overflow: hidden;
+    top: 0;
+    left: 0;
   }
   #close-work-fullscreen{
     text-align: left;
